python/test-data/testInferReturnType4.err
Traceback (most recent call last):
  File "test-data/testInferReturnType4.py", line 17, in <module>
    foo(Dog())
  File "test-data/testInferReturnType4.py", line 15, in foo
    animal.makeSound(1.0)
WyppTypeError: Dog does not implement protocol Animal correctly.
given:    <__wypp__.Dog object at 0x10b81e710>
expected: value of type Animal

context: foo(animal: Animal) -> None
                     ^^^^^^
declared at: test-data/testInferReturnType4.py:14
caused by: test-data/testInferReturnType4.py:17
  | foo(Dog())

The return value of method 'makeSound' does violate the protocol 'Animal'.
The annotation 'int' is incompatible with the protocol's annotation 'None'
when checking against the following value:

given:    1
expected: None

context: makeSound(self: Self, loadness: float) -> None
                                                   ^^^^
declared at: test-data/testInferReturnType4.py:11
declared at: test-data/testInferReturnType4.py:7
caused by: test-data/testInferReturnType4.py:12
  |         return 1
